--- a/index.html
+++ b/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
-<html lang="" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Salamdeen's personal site</title>
+    <title>Abdul Salam</title>
+      <link rel="stylesheet" href="css/styles.css">
+      <link rel="icon" href="favicon.ico">
+      <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@200&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
-    <table cellspacing="20" >
-      <tr>
-        <td><img src="Personal.jpg" alt="Salamdeen Profile Picture" height="200px" width="200px">
-</td>
-        <td>  <h1> Abdul Salam Issahaku</h1>
-          <p>
-          <em>Information Tech. student in <a href="https://uds.edu.gh/">University for Development studies(UDS)</a> and a web developer <br /> Faculty of Mathematical Sciences <br />Department of Information Technology </em>
-          </p>
-          <p>
-            I am an aspiring web developer. I love coffee and also love listening to cool music. I want to be one of the best developers in the world!
-          </p>
-          </td>
-      </tr>
-    </table>
-    <hr />
-<h3>Education</h3>
-
-<ul><li>Tolon Irshadiya E/A Primary School </li> <li> Tolon D/A Junior High School, Block B </li> <li>Ghana Senior High School Tamale </li> <li> <a href="https://uds.edu.gh/">University for Development studies (Navrongo)</a> </li></ul>
-<hr>
-<h3>Work Experience</h3>
-<table>
-  <tr>
-    <th>Year</th>
-    <th>Work</th>
-  </tr>
-  <tr>
-    <td>2016</td>
-    <td>Self employed</td>
-  </tr>
-  <tr>
-    <td>2019-2023</td>
-    <td>Student</td>
-  </tr>
-</table>
-<hr>
-<h3>Skills</h3>
-
-<table>
-
+    <div class="top-container">
+      <img class="top-cloud" src="Images/cloud.png" alt="Clouds" width="100px" height="100px">
+      <h1 class="myAnim">I am Abdul Salam</h1>
+      <h2 class="developer"> a web developer<h2>
+      <img class="bottom-cloud" src="Images/cloud.png" alt="Clouds" width="100px" height="100px">
+      <img src="Images/mttt.png" alt="mountain" width="700px" height="400px" ></div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="profile-image" src="Images/profile.jpg" alt="My profile">
+        <h2>Hello.</h2>
+        <p class="intro">I am a young developer from Ghana. Building new things is what makes me happy, I have a very strong enthusiasm in coding and I want to be one of the best developers in the world. I am also a strong lover of the blockchain technology. Not going to forget, I don't like food at all BUT I love it ❤ and coffee🥤 is my lifetime partner.I hope I will have access to it in heaven😍</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="writing-skill" src="Images/wrting.png" alt="Writing skills">
+          <h3> Writing Skills</h3>
+          <p>As I learn, I also enjoy writing and I have gained writing experience through writig of blog post. I started my writing journey in steemit, a blockchain based blocking platform. I also prepared articles about web development and programming ad you ca read them in the link below</p>
+        </div>
+        <div class="skill-row">
+          <img class="web-dev" src="Images/wedgev.png"  width="25%"alt="Web dev">
+          <h3>Web development</h3>
+          <p>I started learning coding in my second year in High School after I was introduced by a classmate who saw the zeal in me. <br /> Since then, I have been learning  alot of programming stuff and I finally descovered my talent in the Web development field. I have been using alot of tools and programs for my development, some of the tools I usually use are listed below</p>
+    <table class="skill-table">
     <tr>
       <td>HTML</td>
       <td>💎💎💎💎</td>
@@ -61,12 +50,20 @@
       <td>💎</td>
     </tr>
   </table>
-
-
-
-
-<hr>
-<a href="hobbies.html"> My Hobbies</a> <br>
-<a href="contact.html"> My contact details</a>
+      </div>
+      <hr>
+      <a href="contact.html"> My contact details</a>
+        <h2>Get In Touch</h2>
+        <h3>If you will like to engage with me.</h3>
+        <p class="intro">We can get in touch via any of my social media handles I have listed below. I have provided my email address and you can mail me through that addresswith any issues and concerns.</p>
+        <a class="btn" href="mailto:iabdulsalam635@gmail.com@email.com">CONTACT ME</a>
+      </div>
+    </div>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/abdul-salam-issahaku-52ab4b228/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/salamdeen0">Twitter</a>
+      <a class="footer-link" href="https://steemit.com/@salamdeen">Website</a>
+      <p class="abdul-salam">© 2021 Abdul Salam</p>
+    </div>
   </body>
 </html>
