--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Abdul Salam</title>
-      <link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="./CSS/styles.css">
       <link rel="icon" href="favicon.ico">
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@200&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="/Images/cloud.png" alt="Clouds" width="100px" height="100px">
+      <img class="top-cloud" src="./Images/cloud.png" alt="Clouds" width="100px" height="100px">
       <h1 class="myAnim">I am Abdul Salam</h1>
       <h2 class="developer"> a web developer<h2>
-      <img class="bottom-cloud" src="/Images/cloud.png" alt="Clouds" width="100px" height="100px">
+      <img class="bottom-cloud" src="./Images/cloud.png" alt="Clouds" width="100px" height="100px">
       <img src="Images/mttt.png" alt="mountain" width="700px" height="400px" ></div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile-image" src="/Images/profile.jpg" alt="My profile">
+        <img class="profile-image" src="./Images/profile.jpg" alt="My profile">
         <h2>Hello.</h2>
         <p class="intro">I am a young developer from Ghana. Building new things is what makes me happy, I have a very strong enthusiasm in coding and I want to be one of the best developers in the world. I am also a strong lover of the blockchain technology. Not going to forget, I don't like food at all BUT I love it ❤ and coffee🥤 is my lifetime partner.I hope I will have access to it in heaven😍</p>
       </div>
@@ -24,12 +24,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="writing-skill" src="/Images/wrting.png" alt="Writing skills">
+          <img class="writing-skill" src="./Images/wrting.png" alt="Writing skills">
           <h3> Writing Skills</h3>
           <p>As I learn, I also enjoy writing and I have gained writing experience through writig of blog post. I started my writing journey in steemit, a blockchain based blocking platform. I also prepared articles about web development and programming ad you ca read them in the link below</p>
         </div>
         <div class="skill-row">
-          <img class="web-dev" src="/Images/wedgev.png"  width="25%"alt="Web dev">
+          <img class="web-dev" src="./Images/wedgev.png"  width="25%"alt="Web dev">
           <h3>Web development</h3>
           <p>I started learning coding in my second year in High School after I was introduced by a classmate who saw the zeal in me. <br /> Since then, I have been learning  alot of programming stuff and I finally descovered my talent in the Web development field. I have been using alot of tools and programs for my development, some of the tools I usually use are listed below</p>
     <table class="skill-table">
